add new resources
add patent
add new project
add new paper

--- a/people.html
+++ b/people.html
@@ -9,7 +9,7 @@ picture-role-groups:
 
 no-picture-role-groups:
 - {roles: [doctor_student, master_student], width: 5}
-- {roles: [alum], width: 7}
+- {roles: [alum, visiting_student], width: 7}
 ---
 
 <section class="people row justify-content-between">
