update profile and logo

--- a/people.html
+++ b/people.html
@@ -3,7 +3,7 @@ layout: default
 title: 人员
 
 picture-role-groups:
-- {roles: [faculty, postdoc], width: 6}
+- {roles: [faculty_leader,faculty, postdoc], width: 6}
 - {roles: [special_faculty, collab], width: 6}
 
 
