add new patents

--- a/publications.html
+++ b/publications.html
@@ -15,3 +15,10 @@ title: 成果(2017年起)
 </p>
 
 {% include pubs_conference.html %}
+
+<h4>专利</h4>
+<p>
+    <a href="{{ site.base }}/bib/pubs_patent.bib">Download BibTeX.</a>
+</p>
+
+{% include pubs_patent.html %}
